--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_AuthorShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_AuthorShow.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -91,11 +91,11 @@
         <p>These packages are available as a package collection, 
           <a href="/package-collections">usable in Xcode 13 or the Swift Package Manager 5.5</a>.
         </p>
-        <form class="copyable_input">
+        <form class="copyable-input">
           <input type="text" data-button-name="Copy Package Collection URL" data-event-name="Copy Package Collection URL Button" value="http://localhost:8080/test-author/collection.json" readonly/>
         </form>
         <hr class="minor"/>
-        <ul id="package_list">
+        <ul id="package-list">
           <li>
             <a href="https://example.com/owner/name.git">
               <h4>vapor-1</h4>
