--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -111,10 +111,10 @@
           <h3>Swift 5.6</h3>
           <ul class="matrix builds">
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>iOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -138,10 +138,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (SPM)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -165,10 +165,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (Xcode)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -192,10 +192,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>Linux</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -219,10 +219,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>tvOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -246,10 +246,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>watchOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -277,10 +277,10 @@
           <h3>Swift 5.5</h3>
           <ul class="matrix builds">
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>iOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -304,10 +304,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (SPM)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -331,10 +331,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (Xcode)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -358,10 +358,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>Linux</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -385,10 +385,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>tvOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -412,10 +412,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>watchOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -443,10 +443,10 @@
           <h3>Swift 5.4</h3>
           <ul class="matrix builds">
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>iOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -470,10 +470,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (SPM)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -497,10 +497,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (Xcode)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -524,10 +524,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>Linux</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -551,10 +551,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>tvOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -578,10 +578,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>watchOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -609,10 +609,10 @@
           <h3>Swift 5.3</h3>
           <ul class="matrix builds">
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>iOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -636,10 +636,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (SPM)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -663,10 +663,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>macOS (Xcode)</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -690,10 +690,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>Linux</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -717,10 +717,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>tvOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
@@ -744,10 +744,10 @@
               </div>
             </li>
             <li class="row">
-              <div class="row_labels">
+              <div class="row-labels">
                 <strong>watchOS</strong>
               </div>
-              <div class="column_labels">
+              <div class="column-labels">
                 <div>
                   <span class="stable">1.2.3</span>
                 </div>
