--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildMonitorIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildMonitorIndex.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -89,10 +89,10 @@
       <div class="inner">
         <h2>Recent Builds</h2>
         <p>The Swift Package Index determines Swift version and platform compatibility by running multiple builds against each version of every package. If you're curious which packages are currently processing through the build system, this list shows all recent build activity.</p>
-        <div class="build_monitor">
+        <div class="build-monitor">
           <a href="/builds/5974D34D-B2B9-4CDB-9580-E1AC74CB579D">
             <div class="row">
-              <div class="package_name">
+              <div class="package-name">
                 <h3>Leftpad
                   <span> by Dave Verwer</span>
                 </h3>
@@ -113,7 +113,7 @@
           </a>
           <a href="/builds/E879173A-DC19-4949-8014-F7B6DAFBF0CE">
             <div class="row">
-              <div class="package_name">
+              <div class="package-name">
                 <h3>Rester
                   <span> by Sven A. Schmidt</span>
                 </h3>
@@ -134,7 +134,7 @@
           </a>
           <a href="/builds/85B10001-0F52-4560-BDA6-A4B11D910675">
             <div class="row">
-              <div class="package_name">
+              <div class="package-name">
                 <h3>AccessibilitySnapshotColorBlindness
                   <span> by James Sherlock</span>
                 </h3>
