--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -117,7 +117,7 @@
             <code>env DEVELOPER_DIR="/Applications/Xcode_11_6.app" xcrun xcodebuild -IDEClonedSourcePackagesDirPathOverride="$PWD/.derivedData" build -scheme "Bar" -destination "generic/platform=ios"</code>
           </pre>
           <h3>Build Log</h3>
-          <pre id="build_log">
+          <pre id="build-log">
             <code>Ditto /Users/spi/Library/Developer/Xcode/DerivedData/spi-builder-workspace-biasxiwyxlwyupcfwytrllmqnogk/Build/Products/Debug/PMKFoundation.swiftmodule/x86_64.swiftdoc /Users/spi/Library/Developer/Xcode/DerivedData/spi-builder-workspace-biasxiwyxlwyupcfwytrllmqnogk/Build/Intermediates.noindex/PMKFoundation.build/Debug/PMKFoundation.build/Objects-normal/x86_64/PMKFoundation.swiftdoc (in target 'PMKFoundation' from project 'PMKFoundation')
     cd /Users/spi/builds/zsxYGgdt/0/finestructure/swiftpackageindex-builder/spi-builder-workspace/.derivedData/checkouts/Foundation
     /usr/bin/ditto -rsrc /Users/spi/Library/Developer/Xcode/DerivedData/spi-builder-workspace-biasxiwyxlwyupcfwytrllmqnogk/Build/Intermediates.noindex/PMKFoundation.build/Debug/PMKFoundation.build/Objects-normal/x86_64/PMKFoundation.swiftdoc /Users/spi/Library/Developer/Xcode/DerivedData/spi-builder-workspace-biasxiwyxlwyupcfwytrllmqnogk/Build/Products/Debug/PMKFoundation.swiftmodule/x86_64.swiftdoc
