--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocumentationErrorPageView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocumentationErrorPageView.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -73,7 +73,7 @@
     </p>
     <main>
       <div class="inner">
-        <section class="error_message">
+        <section class="error-message">
           <h4>Documentation for this package is not yet available</h4>
           <p>For newly added packages or packages which have only just started to adopt DocC documentation, it can take a short while for documentation to be generated and available.</p>
           <p>If this error persists, please 
