--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ErrorPageView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ErrorPageView.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -73,7 +73,7 @@
     </p>
     <main>
       <div class="inner">
-        <section class="error_message">
+        <section class="error-message">
           <h4>404 - Not Found</h4>
           <p>If you were expecting to find a page here, please 
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/new/choose">raise an issue</a>.
