--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -107,15 +107,15 @@
             <a href="https://shields.io">shields.io</a> badges to your package's README file. Display your package's compatibility with recent versions of Swift, or with different platforms, or both!
           </p>
           <strong>Swift Version Compatibility Badge</strong>
-          <div class="markdown_badges">
-            <form class="copyable_input">
+          <div class="markdown-badges">
+            <form class="copyable-input">
               <input type="text" data-button-name="Copy Markdown" data-event-name="Copy Markdown Button" value="[![](https://img.shields.io/endpoint?url=http%3A%2F%2Flocalhost%3A8080%2Fapi%2Fpackages%2Fexample%2Fpackage%2Fbadge%3Ftype%3Dswift-versions)](http://localhost:8080/example/package)" readonly/>
             </form>
             <img alt="Swift Version Compatibility for Example Package" src="https://img.shields.io/endpoint?url=http%3A%2F%2Flocalhost%3A8080%2Fapi%2Fpackages%2Fexample%2Fpackage%2Fbadge%3Ftype%3Dswift-versions"/>
           </div>
           <strong>Platform Compatibility Badge</strong>
-          <div class="markdown_badges">
-            <form class="copyable_input">
+          <div class="markdown-badges">
+            <form class="copyable-input">
               <input type="text" data-button-name="Copy Markdown" data-event-name="Copy Markdown Button" value="[![](https://img.shields.io/endpoint?url=http%3A%2F%2Flocalhost%3A8080%2Fapi%2Fpackages%2Fexample%2Fpackage%2Fbadge%3Ftype%3Dplatforms)](http://localhost:8080/example/package)" readonly/>
             </form>
             <img alt="Platform Compatibility for Example Package" src="https://img.shields.io/endpoint?url=http%3A%2F%2Flocalhost%3A8080%2Fapi%2Fpackages%2Fexample%2Fpackage%2Fbadge%3Ftype%3Dplatforms"/>
