--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_missingPackage.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_missingPackage.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -76,8 +76,8 @@
         <h2>Package not found</h2>
         <p>Oh no! It looks like this is a valid GitHub repository but isn't yet a package in the index. If this repository contains a Swift package, please add it.</p>
         <p class="right">
-          <a class="big_button green" href="https://github.com/SwiftPackageIndex/PackageList/issues/new?labels=Add+Package&template=add_package.yml&title=Add+package&list=https%3A%2F%2Fgithub.com%2Fmissing%2Fpackage.git">Add this Package</a>
-          <a class="big_button blue" href="https://github.com/missing/package">View on GitHub</a>
+          <a class="big-button green" href="https://github.com/SwiftPackageIndex/PackageList/issues/new?labels=Add+Package&template=add_package.yml&title=Add+package&list=https%3A%2F%2Fgithub.com%2Fmissing%2Fpackage.git">Add this Package</a>
+          <a class="big-button blue" href="https://github.com/missing/package">View on GitHub</a>
         </p>
       </div>
     </main>
