--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -67,14 +67,14 @@
     </section>
     <main>
       <div class="inner">
-        <section class="two_column">
+        <section class="two-column">
           <section>
-            <section class="twitter_spaces">
+            <section class="twitter-spaces">
               <p>Join us for our 
                 <a href="https://example.com/next/twitter/space/">next Twitter Space</a> discussing new and updated packages. Or catch up with 
                 <a href="https://example.com/previous/twitter/space/">our most recent episode</a>.
               </p>
-              <p class="twitter_profile">
+              <p class="twitter-profile">
                 <small>Follow along at 
                   <a href="https://twitter.com/SwiftPackages">@SwiftPackages</a>
                 </small>
