--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_KeywordShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_KeywordShow.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -88,7 +88,7 @@
     <main>
       <div class="inner">
         <h2 class="trimmed">Packages for keyword “networking”</h2>
-        <ul id="package_list">
+        <ul id="package-list">
           <li>
             <a href="https://example.com/owner/name.git">
               <h4>Networking Package 1</h4>
