--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_emoji_summary.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_emoji_summary.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -92,8 +92,8 @@
     </nav>
     <main>
       <div class="inner">
-        <div class="two_column v_end">
-          <div class="package_title">
+        <div class="two-column v-end">
+          <div class="package-title">
             <h2>Alamofire</h2>
             <small>
               <a href="https://github.com/Alamo">Alamo</a>
@@ -107,26 +107,26 @@
               <button class="close" data-action="click->modal-panel#hide">&times;</button>
               <p>How you add this package to your project depends on what kind of project you're developing.</p>
               <h4>When working with an Xcode project:</h4>
-              <form class="copyable_input">
+              <form class="copyable-input">
                 <input type="text" data-button-name="Copy Package URL" data-event-name="Copy Xcodeproj Package URL Button" value="https://github.com/Alamofire/Alamofire.git" readonly/>
               </form>
               <h4>When working with a Swift Package Manager manifest:</h4>
               <p>
                 <span class="stable">5.2.0</span>
               </p>
-              <form class="copyable_input">
+              <form class="copyable-input">
                 <input type="text" data-button-name="Copy Code Snippet" data-event-name="Copy SPM Manifest Code Snippet Button" value=".package(url: &quot;https://github.com/Alamofire/Alamofire.git&quot;, from: &quot;5.2.0&quot;)" readonly/>
               </form>
               <p>
                 <span class="beta">5.3.0-beta.1</span>
               </p>
-              <form class="copyable_input">
+              <form class="copyable-input">
                 <input type="text" data-button-name="Copy Code Snippet" data-event-name="Copy SPM Manifest Code Snippet Button" value=".package(url: &quot;https://github.com/Alamofire/Alamofire.git&quot;, from: &quot;5.3.0-beta.1&quot;)" readonly/>
               </form>
               <p>
                 <span class="branch">main</span>
               </p>
-              <form class="copyable_input">
+              <form class="copyable-input">
                 <input type="text" data-button-name="Copy Code Snippet" data-event-name="Copy SPM Manifest Code Snippet Button" value=".package(url: &quot;https://github.com/Alamofire/Alamofire.git&quot;, branch: &quot;main&quot;)" readonly/>
               </form>
             </section>
@@ -134,10 +134,10 @@
         </div>
         <hr class="tight"/>
         <p class="summary">📦 Nothing but Cache. :octocat:</p>
-        <article class="details two_column">
+        <article class="details two-column">
           <section>
             <section>
-              <ul class="main_metadata">
+              <ul class="main-metadata">
                 <li class="history">In development for over 5 years, with 
                   <a href="https://github.com/Alamofire/Alamofire/commits/main">1,433 commits</a> and 
                   <a href="https://github.com/Alamofire/Alamofire/releases">79 releases</a>.
@@ -155,8 +155,8 @@
               </ul>
             </section>
             <hr class="minor"/>
-            <section class="main_compatibility">
-              <div class="two_column v_end">
+            <section class="main-compatibility">
+              <div class="two-column v-end">
                 <h3>Compatibility</h3>
                 <a href="/Alamo/Alamofire/builds">Full Build Results</a>
               </div>
@@ -164,13 +164,13 @@
                 <a href="/Alamo/Alamofire/builds">
                   <ul class="matrix compatibility">
                     <li class="row">
-                      <div class="row_labels">
+                      <div class="row-labels">
                         <p>
                           <span class="stable">5.2.3</span> and 
                           <span class="branch">main</span>
                         </p>
                       </div>
-                      <div class="column_labels">
+                      <div class="column-labels">
                         <div>5.6</div>
                         <div>5.5</div>
                         <div>5.4</div>
@@ -184,12 +184,12 @@
                       </div>
                     </li>
                     <li class="row">
-                      <div class="row_labels">
+                      <div class="row-labels">
                         <p>
                           <span class="beta">6.0.0-b1</span>
                         </p>
                       </div>
-                      <div class="column_labels">
+                      <div class="column-labels">
                         <div>5.6</div>
                         <div>5.5</div>
                         <div>5.4</div>
@@ -207,12 +207,12 @@
                 <a href="/Alamo/Alamofire/builds">
                   <ul class="matrix compatibility">
                     <li class="row">
-                      <div class="row_labels">
+                      <div class="row-labels">
                         <p>
                           <span class="stable">5.2.3</span>
                         </p>
                       </div>
-                      <div class="column_labels">
+                      <div class="column-labels">
                         <div>iOS</div>
                         <div>macOS</div>
                         <div>watchOS</div>
@@ -228,12 +228,12 @@
                       </div>
                     </li>
                     <li class="row">
-                      <div class="row_labels">
+                      <div class="row-labels">
                         <p>
                           <span class="beta">6.0.0-b1</span>
                         </p>
                       </div>
-                      <div class="column_labels">
+                      <div class="column-labels">
                         <div>iOS</div>
                         <div>macOS</div>
                         <div>watchOS</div>
@@ -249,12 +249,12 @@
                       </div>
                     </li>
                     <li class="row">
-                      <div class="row_labels">
+                      <div class="row-labels">
                         <p>
                           <span class="branch">main</span>
                         </p>
                       </div>
-                      <div class="column_labels">
+                      <div class="column-labels">
                         <div>iOS</div>
                         <div>macOS</div>
                         <div>watchOS</div>
@@ -275,14 +275,14 @@
             </section>
           </section>
           <section>
-            <section class="sidebar_links">
+            <section class="sidebar-links">
               <ul>
                 <li>
                   <a href="https://github.com/Alamo/Alamofire">View on GitHub</a>
                 </li>
-                <li class="try_in_playground">
+                <li class="try-in-playground">
                   <a href="spi-playgrounds://open?dependencies=Alamo/Alamofire">Try in a Playground</a>
-                  <div id="app_download_explainer" class="hidden">
+                  <div id="app-download-explainer" class="hidden">
                     <strong>Launching the SPI Playgrounds app&hellip;</strong>
                     <p>If nothing happens, you may not have the app installed. 
                       <a href="/try-in-a-playground?dependencies=Alamo/Alamofire">Download the Swift Package Index Playgrounds app</a> and try again.
@@ -292,7 +292,7 @@
               </ul>
             </section>
             <hr class="minor"/>
-            <section class="sidebar_versions" aria-label="Versions">
+            <section class="sidebar-versions" aria-label="Versions">
               <ul>
                 <li class="stable">
                   <a href="https://github.com/Alamofire/Alamofire/releases/tag/5.2.0">
@@ -318,7 +318,7 @@
               </ul>
             </section>
             <hr class="minor"/>
-            <section class="sidebar_package_authors">
+            <section class="sidebar-package-authors">
               <small>
                 <strong>Do you maintain this package?</strong> Get shields.io compatibility badges and learn how to control our build system. 
                 <a href="/Alamo/Alamofire/information-for-package-maintainers">Learn more</a>.
