--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow_withFilters.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow_withFilters.1.html
@@ -37,9 +37,9 @@
         </a>
         <nav>
           <ul>
-            <li class="menu_scta">
-              <a id="menu_scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
-              <div id="menu_scta_help">
+            <li class="menu-scta">
+              <a id="menu-scta" href="https://github.com/sponsors/SwiftPackageIndex"></a>
+              <div id="menu-scta-help">
                 <p>The Swift Package Index is an open-source project entirely funded by community donations.</p>
                 <p>Please consider sponsoring this project. 
                   <strong>Thank you!</strong>
@@ -85,27 +85,27 @@
               <div title="Search"></div>
             </button>
           </form>
-          <div class="filter_suggestions">Add filters to narrow search results. 
+          <div class="filter-suggestions">Add filters to narrow search results. 
             <span class="learn_more">
               <a href="/faq#search-filters">Learn more</a>.
             </span>
           </div>
         </section>
-        <section class="search_results">
+        <section class="search-results">
           <p>Results for &ldquo;
             <strong>query</strong>&rdquo;&hellip;
           </p>
-          <div class="two_column mobile_reversed">
-            <section class="package_results">
+          <div class="two-column mobile-reversed">
+            <section class="package-results">
               <h4>Matching packages where&hellip;</h4>
-              <ul class="filter_list">
+              <ul class="filter-list">
                 <li>
                   <span class="filter-key">license</span> 
                   <span class="filter-comparison">is</span> 
                   <span class="filter-value">mit</span>
                 </li>
               </ul>
-              <ul id="package_list" data-focus-query-field="true">
+              <ul id="package-list" data-focus-query-field="true">
                 <li>
                   <a href="https://example.com/package/one">
                     <h4>Package One</h4>
@@ -168,7 +168,7 @@
               </ul>
             </section>
             <div>
-              <section class="author_results">
+              <section class="author-results">
                 <h4>Matching authors</h4>
                 <div data-controller="overflowing-list" data-overflowing-list-overflow-message-value="Show more authors…" data-overflowing-list-overflow-height-value="129" data-overflowing-list-collapsed-value="true" data-action="turbo:load@document->overflowing-list#addShowMoreLinkIfNeeded">
                   <ul data-overflowing-list-target="list">
@@ -184,28 +184,28 @@
                   </ul>
                 </div>
               </section>
-              <section class="keyword_results">
+              <section class="keyword-results">
                 <h4>Matching keywords</h4>
                 <div data-controller="overflowing-list" data-overflowing-list-overflow-message-value="Show more keywords…" data-overflowing-list-overflow-height-value="260" data-overflowing-list-collapsed-value="true" data-action="turbo:load@document->overflowing-list#addShowMoreLinkIfNeeded">
                   <ul data-overflowing-list-target="list" class="keywords">
                     <li>
                       <a href="/keywords/keyword4">keyword4
-                        <span class="count_tag">4</span>
+                        <span class="count-tag">4</span>
                       </a>
                     </li>
                     <li>
                       <a href="/keywords/keyword3">keyword3
-                        <span class="count_tag">3</span>
+                        <span class="count-tag">3</span>
                       </a>
                     </li>
                     <li>
                       <a href="/keywords/keyword2">keyword2
-                        <span class="count_tag">2</span>
+                        <span class="count-tag">2</span>
                       </a>
                     </li>
                     <li>
                       <a href="/keywords/keyword1">keyword1
-                        <span class="count_tag">1</span>
+                        <span class="count-tag">1</span>
                       </a>
                     </li>
                   </ul>
