--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
@@ -36,8 +36,8 @@
      </ul>
     </nav>
    </div>
-   <div class="latest_stable_wrap">
-    <div class="inner latest_stable">
+   <div class="latest-stable-wrap">
+    <div class="inner latest-stable">
      This documentation is from the main branch and may not reflect the latest stable release. 
      <a href="/owner/package/1.0.1/documentation/archive1">View latest stable docs</a>.
     </div>
