--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="/docc.css?test">
  </head> 
  <body>
+  <div class="spi-staging">
+   Staging / Development
+  </div>
   <header class="spi">
    <div class="inner breadcrumbs">
     <nav>
@@ -58,5 +61,8 @@
     </nav>
    </div>
   </footer>
+  <div class="spi-staging">
+   Staging / Development
+  </div>
  </body>
 </html>
