--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="/docc.css?test">
  </head> 
  <body>
-  <div class="spi-staging">
-   Staging / Development
-  </div>
   <header class="spi">
+   <div class="staging">
+    Staging / Development
+   </div>
    <div class="inner breadcrumbs">
     <nav>
      <ul>
@@ -60,9 +60,9 @@
      <small>The Swift Package Index is entirely funded by sponsorship. Thank you to <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server#funding-and-sponsorship">all our sponsors for their generosity</a>.</small>
     </nav>
    </div>
+   <div class="staging">
+    Staging / Development
+   </div>
   </footer>
-  <div class="spi-staging">
-   Staging / Development
-  </div>
  </body>
 </html>
