--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
@@ -33,6 +33,7 @@
   <p>This is DocC content.</p>   
   <footer class="spi">
    <div class="inner">
+    <small>Last updated on 1 Jan 1970</small>
     <nav>
      <ul>
       <li><a href="https://blog.swiftpackageindex.com">Blog</a></li>
@@ -41,8 +42,8 @@
       <li><a href="https://swiftpackageindex.statuspage.io">Uptime and System Status</a></li>
       <li><a href="https://twitter.com/swiftpackages">Twitter</a></li>
      </ul>
-     <small>The Swift Package Index is entirely funded by sponsorship. Thank you to <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server#funding-and-sponsorship">all our sponsors for their generosity</a>.</small>
     </nav>
+    <small>The Swift Package Index is entirely funded by sponsorship. Thank you to <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server#funding-and-sponsorship">all our sponsors for their generosity</a>.</small>
    </div>
    <div class="staging">
     Staging / Development
